src/test/ui/feature-gates/issue-43106-gating-of-test.stderr
error: cannot determine resolution for the attribute macro `test`
  --> $DIR/issue-43106-gating-of-test.rs:4:4
   |
LL | #![test                    = "4200"]
   |    ^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: `test` attribute cannot be used at crate level
  --> $DIR/issue-43106-gating-of-test.rs:4:1
   |
LL | #![test                    = "4200"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: perhaps you meant to use an outer attribute
   |
LL | #[test                    = "4200"]
   |

error: aborting due to 2 previous errors

